--- a/package.json
+++ b/package.json
@@ -5,13 +5,24 @@
   "main": "index.js",
   "scripts": {
     "build": "sass src/scss:dist/css",
-    "start": "sass --watch src/scss:dist/css & live-server"
+    "start": "sass --watch src/scss:dist/css & live-server",
+    "test": "npm run test-unit && npm run test-e2e-cli",
+    "test-unit": "jest",
+    "test-e2e": "cypress open",
+    "test-e2e-cli": "cypress run"
   },
   "keywords": [],
   "author": "Noroff",
   "license": "ISC",
   "devDependencies": {
-    "live-server": "^1.2.2",
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.4",
+    "cypress": "^12.9.0",
+    "eslint": "^8.37.0",
+    "eslint-plugin-cypress": "^2.13.1",
+    "eslint-plugin-jest": "^27.2.1",
+    "jest": "^29.2.0",
+    "live-server": "^1.1.0",
     "sass": "^1.54.8"
   },
   "dependencies": {
