--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "npm run test-unit && npm run test-e2e-cli",
     "test-unit": "jest",
     "test-e2e": "cypress open",
-    "test-e2e-cli": "cypress run"
+    "test-e2e-cli": "cypress run",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "Noroff",
@@ -21,11 +22,16 @@
     "eslint": "^8.37.0",
     "eslint-plugin-cypress": "^2.13.1",
     "eslint-plugin-jest": "^27.2.1",
+    "husky": "^8.0.3",
     "jest": "^29.2.0",
+    "lint-staged": "^13.2.0",
     "live-server": "^1.1.0",
     "sass": "^1.54.8"
   },
   "dependencies": {
     "bootstrap-dark-5": "^1.1.3"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix"
   }
 }
