--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test-e2e-cli": "cypress run",
     "prepare": "husky install",
     "lint": "eslint src/**/*.js",
-    "lint-fix": "eslint src/**/*.js --cache --fix"
+    "lint-fix": "eslint src/**/*.js --cache --fix",
+    "format": "prettier -w src/*/.js"
   },
   "keywords": [],
   "author": "Noroff",
@@ -28,6 +29,7 @@
     "jest": "^29.2.0",
     "lint-staged": "^13.2.0",
     "live-server": "^1.1.0",
+    "prettier": "^2.8.7",
     "sass": "^1.54.8"
   },
   "dependencies": {
