--- a/.github/workflows/e2e-testing.yml
+++ b/.github/workflows/e2e-testing.yml
@@ -10,6 +10,9 @@ jobs:
     steps:
       - name: Checkout under $GITHUB_WORKSPACE
         uses: actions/checkout@main
+        
+      - name: Environment variables
+        run: echo '${{ secrets.CYPRESS_ENV }}' > cypress.env.json
 
       - name: run cypress tests with electron
         uses: cypress-io/github-action@v4
